<resources>
    <string name="app_name">Finza</string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="home_activity">HomeActivity</string>
    <string name="home">Home</string>
    <string name="stories">Stories</string>
    <string name="arena">Arena</string>
    <string name="beat">Beat</string>
    <string name="more">More</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="network">Network</string>
    <string name="offers">Offers</string>
    <string name="rate">Rate</string>
    <string name="product">Product</string>
    <string name="my_brands">My Brands</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aqua_finn">Aqua Finn</string>
    <string name="mrp">MRP</string>
    <string name="unit_wt">Unit Wt</string>
    <string name="product_name">Product Name</string>
    <string name="current_stock">Current Stock</string>
    <string name="stock_out">Stock\nOut</string>
    <string name="stock_in">Stock\nIn</string>
    <string name="exp_stock">Exp\nStock</string>
    <string name="msl">MSL</string>
    <string name="status">Status</string>
    <string name="moq">MOQ</string>
    <string name="margin">Margin</string>
    <string name="ss">SS</string>
    <string name="distributor">Distributor</string>
    <string name="wholesaler">WholeSaler</string>
    <string name="retailer">Retailer</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="coupons">Coupons</string>
    <string name="coupons1">Coupons:</string>
    <string name="offer_value">Offer Value:</string>
    <string name="business_generated">Business Generated:</string>
    <string name="sales">Sales</string>
    <string name="search">Search...</string>
    <string name="manager">Manager</string>
    <string name="designation">Designation</string>
    <string name="name">Name</string>
    <string name="insights">Insights</string>
    <string name="insight">Insight</string>
    <string name="brands">Brands</string>
    <string name="orders">Orders</string>
    <string name="pri_orders">PRI Orders</string>
    <string name="sec_orders">SEC Orders</string>
    <string name="network_orders">Network Orders</string>
    <string name="channel_partner">Channel Partner</string>
    <string name="channel_partners">Channel Partners</string>
    <string name="active_cps">Active CPs   </string>
    <string name="lead_cps">Lead CPs</string>
    <string name="location">Location</string>
    <string name="admin">Admin:</string>
    <string name="stock">Stock</string>
    <string name="profile">Profile</string>
    <string name="cp_id">CP ID:</string>
    <string name="remarks">Remarks</string>
    <string name="select_date">Select Date</string>
    <string name="visit_remarks">Visit Remarks</string>
    <string name="new1">New</string>
    <string name="distributor_working_type">Distributor working type</string>
    <string name="monthly_potential">Monthly Potential</string>
    <string name="sampling_done">Sampling Done</string>
    <string name="experience_in_fmcg">Experience in FMCG</string>
    <string name="current_brands">Current Brands</string>
    <string name="expected_closure_date">Expected Closure Date</string>
    <string name="is_cp_interested">Is CP interested</string>
    <string name="sampling_required">Sampling Required</string>
    <string name="sampling_quantity">Sampling Quantity</string>
    <string name="warehouse_space_sq_ft">Warehouse Space (Sq ft)</string>
    <string name="no_of_tempo">No. of Tempo</string>
    <string name="type_of_tempo">Type Of Tempo</string>
    <string name="total_delivery_staff">Total Delivery Staff</string>
    <string name="capture_visiting_card_of_the_distributor">Capture visiting card of the distributor</string>
    <string name="select_month">Select Month</string>
    <string name="select_brand">Select Brand</string>
    <string name="salesperson">Salesperson</string>
    <string name="market_snapshot">Market Snapshot</string>
    <string name="states">States</string>
    <string name="cities">Cities</string>
    <string name="beats">Beats</string>
    <string name="retailers">Retailers</string>
    <string name="live">Live</string>
    <string name="sub_category">Sub Category</string>
    <string name="rank">Rank</string>
    <string name="asm_zsm_name">ASM/ZSM Name</string>
    <string name="target_vs_achievement">Target vs Achievement</string>
    <string name="current_month">Current Month</string>
    <string name="last_month">Last Month</string>
    <string name="secondary">Secondary</string>
    <string name="primary">Primary</string>
    <string name="indirect_cp">Indirect CP</string>
    <string name="direct_cp">Direct CP</string>
    <string name="pending">Pending</string>
    <string name="order_id">Order ID:</string>
    <string name="details">Details</string>
    <string name="outstanding">Outstanding</string>
    <string name="no_data">No Data</string>
    <string name="completed">Completed</string>
    <string name="cancelled_order">Cancelled Order</string>
    <string name="completed_order">Completed Order</string>
    <string name="outstanding_order">Outstanding Order</string>
    <string name="pending_order">Pending Order</string>
    <string name="address">Address</string>
    <string name="add_on_discount">Add on Discount</string>
    <string name="net_paid_amt">Net Paid Amt.</string>
    <string name="gst_number">GST Number:</string>
    <string name="gst_number1">GST Number</string>
    <string name="purchase_order_value">Purchase Order Value</string>
    <string name="total_amount">Total Amount</string>
    <string name="cancelled">Cancelled</string>
    <string name="assign">Assign</string>
    <string name="confirmed">Confirmed</string>
    <string name="view_details">View Details</string>
    <string name="logout">Logout</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="view">View</string>
    <string name="more_beat">More Beat</string>
    <string name="order_history">Order History</string>
    <string name="last_visit">Last Visit</string>
    <string name="last_order">Last Order</string>
    <string name="last_order_value">Last Order Value</string>
    <string name="more_beat_details">More Beat Details</string>
    <string name="history">History</string>
    <string name="beat_stock_history">Beat Stock History</string>
    <string name="count">Count</string>
    <string name="date">Date</string>
    <string name="more_beat_insights">More Beat Insights</string>
    <string name="average_order_value">Average Order Value</string>
    <string name="monthly">Monthly</string>
    <string name="top_selling_skus">Top Selling SKUs</string>
    <string name="brand">Brand</string>
    <string name="value">Value</string>
    <string name="low_selling_skus">Low Selling SKUs</string>
    <string name="total_order">Total Order</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="my_account">My Account</string>
    <string name="owner_info">Owner Info</string>
    <string name="business_info">Business Info</string>
    <string name="business_name">Business Name</string>
    <string name="upload_qr_code">Upload QR CODE</string>
    <string name="select_paper_size_to_print">Select paper size to print:</string>
    <string name="a4_size_21_cm_29_7_cm">A4 Size- 21 cm*29.7 cm</string>
    <string name="edit_business">Edit Business</string>
    <string name="your_profile_image">Your profile image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="edit_account">Edit Account</string>
    <string name="would_you_like_to_add_any_co_owners_along_with_you">Would you like to add any co-owners along with you?</string>
    <string name="co_owner_name">Co-owner First Name</string>
    <string name="co_owner_last_name">Co-owner Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="pan_card">PAN Card</string>
    <string name="upload_document">Upload Document</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="add_another_owner">Add Another Owner</string>
    <string name="save">Save</string>
    <string name="user_type">User Type</string>
    <string name="validate">Validate</string>
    <string name="business_proof">Business Proof</string>
    <string name="fssai_number">FSSAI Number</string>
    <string name="fssai_expiry_date">FSSAI Expiry Date</string>
    <string name="street_area">Street / Area</string>
    <string name="building_suite">Building, Suite</string>
    <string name="pin_code">Pin code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="this_logo_will_appear_in_your_challan">This logo will appear in your Challan</string>
    <string name="active_hours">Active Hours</string>
    <string name="view_selfie">View Selfie\n</string>
    <string name="end_time">End Time\n</string>
    <string name="start_time">Start Time</string>
    <string name="select_status">Select Status</string>
    <string name="buyers">Buyers</string>
    <string name="cancel">Cancel</string>
    <string name="mark_as_deliver">Mark as Deliver</string>
    <string name="own_order_details">Own Order Details</string>
    <string name="own_order_details_type_2">Own Order Details Type 2</string>
    <string name="upload_invoice">Upload Invoice</string>
    <string name="skip">Skip</string>
    <string name="unassigned_retailer">Unassigned Retailer</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="buyer_address">Buyer Address</string>
    <string name="seller_address">Seller Address</string>
    <string name="plug">Plug</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="category_of_products">Category Of Products</string>
    <string name="top_selling_products">Top Selling Products\n\n</string>
    <string name="inventory_stock">Inventory Stock</string>
    <string name="top_products">Top Products</string>
    <string name="network_delivery_ratio">Network Delivery Ratio</string>
    <string name="state_city_deliver_ratio">State/City Deliver Ratio</string>
    <string name="sales_insights">Sales Insights</string>
    <string name="new_norders">New\nOrders</string>
    <string name="insights_head">Insights Head</string>
    <string name="productive_count">Productive Count</string>
    <string name="no_of_retailers">No. of Retailers</string>
    <string name="sales_beat">Sales Beat</string>
    <string name="sale_locations">Sale Locations</string>
    <string name="order_value">Order Value</string>
    <string name="sales_performance">Sales Performance</string>
    <string name="sales_target">Sales Target</string>
    <string name="allocated">Allocated</string>
    <string name="no_team_found">No team found</string>
    <string name="my_hr">My HR</string>
    <string name="total_leaves_approved">Total leaves approved</string>
    <string name="pending_for_approval">Pending for approval</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="reject">Reject</string>
    <string name="leaves">Leaves</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="on_job_training">On Job Training</string>
    <string name="edit">Edit</string>
    <string name="tags">Tags</string>
    <string name="cps">CPs</string>
    <string name="filter">Filter</string>
    <string name="sales_filter">Sales Filter</string>
</resources>