<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_brands"
        android:icon="@drawable/ic_brand"
        android:title="@string/brands" />

    <item
        android:id="@+id/navigation_home_arena"
        android:icon="@drawable/ic_cart"
        android:title="@string/pri_orders" />

    <item
        android:id="@+id/navigation_home_network_orders"
        android:icon="@drawable/network_updated"
        android:title="@string/sec_orders" />

    <item
        android:id="@+id/navigation_home_more"
        android:icon="@drawable/more_horizontal"
        android:title="@string/more" />

</menu>