<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/clMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvOne"
            style="@style/TextView.PoppinsMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/product_name"
            android:textColor="@color/dark_grey_txt_color_80"
            android:textSize="@dimen/_7sdp" />


        <TextView
            android:id="@+id/tvTwo"
            style="@style/TextView.PoppinsMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/current_stock"
            android:textColor="@color/dark_grey_txt_color_80"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tvThree"
            style="@style/TextView.PoppinsMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_out"
            android:textColor="@color/dark_grey_txt_color_80"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tvFour"
            style="@style/TextView.PoppinsMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_in"
            android:textColor="@color/dark_grey_txt_color_80"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tvFive"
            style="@style/TextView.PoppinsMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/exp_stock"
            android:textColor="@color/dark_grey_txt_color_80"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tvSix"
            style="@style/TextView.PoppinsMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/msl"
            android:textColor="@color/dark_grey_txt_color_80"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tvSeven"
            style="@style/TextView.PoppinsMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/dark_grey_txt_color_80"
            android:textSize="@dimen/_7sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>